// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PopupArrow /> renders correctly 1`] = `
<span
  className="base white top shadow-top"
  style={Object {}}
/>
`;

exports[`<PopupArrow /> renders correctly 2`] = `
<span
  className="base dark-blue bottom shadow shadow-bottom"
  style={Object {}}
/>
`;

exports[`<PopupArrow /> renders correctly 3`] = `
<span
  className="base dark-blue test-class top shadow-top"
  style={Object {}}
/>
`;
